# BirdCLEF2025

./: TODO.txt  eval_perf.ipynb  explore.ipynb  label_map.json  mybirdclef-submission.ipynb  pyproject.toml  recording_location.txt  training-birdclef.ipynb  utils.py
