[project]
name = "birdclef-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "antoine schieb",email = "antoine.schieb@cpe.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "geopy (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
